k8s-manifests/baggage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baggage-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baggage-service
  template:
    metadata:
      labels:
        app: baggage-service
    spec:
      containers:
        - name: baggage-service
          image: 791945999903.dkr.ecr.us-east-1.amazonaws.com/aerolink/baggage-service:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: baggage-service
  namespace: default
spec:
  selector:
    app: baggage-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
