k8s-manifests/websocket-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-service
  template:
    metadata:
      labels:
        app: websocket-service
    spec:
      containers:
        - name: websocket-service
          image: 791945999903.dkr.ecr.us-east-1.amazonaws.com/aerolink/websocket-service:45efaf572b63d8e9653f428f887693f9663595a4
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  namespace: default
spec:
  selector:
    app: websocket-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
