k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aerolink-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/v1/flights
            pathType: Prefix
            backend:
              service:
                name: flight-service
                port:
                  number: 80
          - path: /api/v1/bookings
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 80
          - path: /api/v1/baggage
            pathType: Prefix
            backend:
              service:
                name: baggage-service
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: websocket-service
                port:
                  number: 80
